# MLP

./: CMakeLists.txt
data/: Config.txt  Weights.txt
include/: 1.h  func.h  include.h  matrix.h  network.h
source/: func.cpp  matrix.cpp  network.cpp  source.cpp  test.cpp
